# Cell

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  TODO.txt  cell-cycle.txt  chatgpt.txt  cloc.sh  conanfile.txt  profile_windows  todo.txt  vcpkg.json
.github/workflows/: ci.yml
contrib/qcustomplot/: CMakeLists.txt
doc/: adr.txt  bugs.txt  drawFrame.uxf
doc/benchmarks/: struct_vs_class.cpp
doc/cell-cycle/: overview.tex
doc/physics/: overview.tex
include/libcell/: Disc.hpp  DiscType.hpp  GlobalSettings.hpp  GlobalSettings.inl  Logging.hpp  MathUtils.hpp  NanoflannAdapter.hpp  Particle.hpp  Reaction.hpp  Settings.hpp  Simulation.hpp  StringUtils.hpp  World.hpp
include/libcellgui/: AnalysisPlot.hpp  AnalysisPlotWidget.hpp  ButtonDelegate.hpp  ColorMapping.hpp  ComboBoxDelegate.hpp  DiscDistributionPreviewTableModel.hpp  DiscTypeDistributionDialog.hpp  DiscTypeDistributionTableModel.hpp  DiscTypeDistributionTableView.hpp  DiscTypesDialog.hpp  DistributionAndReactionsDialog.hpp  DistributionAndReactionsModel.hpp  FrameDTO.hpp  GlobalGUISettings.hpp  GlobalSettingsFunctor.hpp  GlobalSimulationSettings.hpp  MainWindow.hpp  PlotAreaWidget.hpp  PlotCategories.hpp  PlotControlWidget.hpp  PlotData.hpp  PlotDataModel.hpp  PlotDataSelectionDialog.hpp  PlotModel.hpp  PlotOverviewWidget.hpp  PlotWidget.hpp  ReactionsDialog.hpp  ReactionsTableModel.hpp  Simulation.hpp  SimulationControlWidget.hpp  SimulationSettingsWidget.hpp  SpinBoxDelegate.hpp  Utility.hpp
include/qt-gui/: AnalysisPlot.hpp  ColorMapping.hpp  DiscDistributionDialog.hpp  DistributionAndReactionsDialog.hpp  FrameDTO.hpp  MainWindow.hpp  QSFMLCanvas.hpp  QSFMLWidget.hpp  Simulation.hpp  SimulationCanvas.hpp  SimulationSettings.hpp  SimulationSettingsWidget.hpp  SimulationWidget.hpp  StatisticsPlot.hpp
include/sfml-spheres/: NanoflannAdapter.hpp  Particle.hpp  Simulation.h  Simulation.hpp  World.hpp
include/simulation-base/: Cell.h  Mitochondrium.h  Nucleus.h  Phases.h
scripts/: CMakePresetsMac.json  setup.sh
scripts/python/: circleBoundsOverlap.py  circleDraw.py  circleOverlap.py
scripts/unix/: clang-format.sh  clang-tidy-check.sh  clang-tidy.sh  clang-tools.sh  print-source-code.sh  setup.sh
scripts/windows/: clang-format.ps1  clang-tidy.ps1  clang-tools.ps1  clang-tools.sh  setup.ps1
src/apps/playground/: CMakeLists.txt  Main.cpp
src/benchmark/: Main.cpp  main.cpp  maina.cpp
src/cell-gui/: Main.cpp
src/lib/gui/: CMakeLists.txt
src/lib/gui/core/: AbstractSimulationBuilder.hpp  ColorMapping.cpp  ColorMapping.hpp  FrameBuffer.cpp  FrameBuffer.hpp  FrameDTO.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PermeabilityMapping.cpp  PermeabilityMapping.hpp  PlotCategories.cpp  PlotCategories.hpp  SFMLJsonSerializers.hpp  SafeCast.hpp  Simulation.cpp  Simulation.hpp  SimulationConfigUpdater.cpp  SimulationConfigUpdater.hpp  StackedHistogram.hpp  Types.hpp  Utility.cpp  Utility.hpp
src/lib/gui/delegates/: ButtonDelegate.cpp  ButtonDelegate.hpp  ComboBoxDelegate.cpp  ComboBoxDelegate.hpp  SpinBoxDelegate.cpp  SpinBoxDelegate.hpp
src/lib/gui/dialogs/: DiscTypeDistributionDialog.cpp  DiscTypeDistributionDialog.hpp  DiscTypeDistributionDialog.ui  DiscTypesDialog.cpp  DiscTypesDialog.hpp  DiscTypesDialog.ui  DiscsDialog.cpp  DiscsDialog.hpp  DistributionDialog.ui  MembraneTypesDialog.cpp  MembraneTypesDialog.hpp  MembraneTypesDialog.ui  MembranesDialog.cpp  MembranesDialog.hpp  PermeabilityDialog.cpp  PermeabilityDialog.hpp  PermeabilityDialog.ui  PlotDataSelectionDialog.cpp  PlotDataSelectionDialog.hpp  PlotDataSelectionDialog.ui  ReactionsDialog.cpp  ReactionsDialog.hpp  SetupDialog.cpp  SetupDialog.hpp  SetupDialog.ui  TableViewDialog.hpp  TableViewDialog.ui
src/lib/gui/models/: AbstractSimulationConfigPartTableModel.hpp  AbstractSimulationConfigTableModel.hpp  AbstractTableModel.hpp  DiscDistributionPreviewTableModel.cpp  DiscDistributionPreviewTableModel.hpp  DiscTableModel.cpp  DiscTableModel.hpp  DiscTypeDistributionTableModel.cpp  DiscTypeDistributionTableModel.hpp  DiscTypesTableModel.cpp  DiscTypesTableModel.hpp  DiscsTableModel.cpp  DiscsTableModel.hpp  MembraneTypesTableModel.cpp  MembraneTypesTableModel.hpp  MembranesTableModel.cpp  MembranesTableModel.hpp  PermeabilityTableModel.cpp  PermeabilityTableModel.hpp  PlotModel.cpp  PlotModel.hpp  ReactionsTableModel.cpp  ReactionsTableModel.hpp  SetupModel.cpp  SetupModel.hpp
src/lib/gui/widgets/: MultiSelectListWidget.cpp  MultiSelectListWidget.hpp  PlotControlWidget.cpp  PlotControlWidget.hpp  PlotControlWidget.ui  PlotWidget.cpp  PlotWidget.hpp  QSFMLWidget.cpp  QSFMLWidget.hpp  SimulationControlWidget.cpp  SimulationControlWidget.hpp  SimulationControlWidget.ui  SimulationInfoWidget.cpp  SimulationInfoWidget.hpp  SimulationInfoWidget.ui  SimulationWidget.cpp  SimulationWidget.hpp
src/libcell/: AbstractReactionTable.hpp  Cell.cpp  Cell.hpp  CellState.cpp  CellState.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CollisionHandler.cpp  CollisionHandler.hpp  CollisionHandling.cpp  CollisionHandling.hpp  Disc.cpp  Disc.hpp  DiscType.cpp  DiscType.hpp  DiscTypeRegistry.cpp  DiscTypeRegistry.hpp  ExceptionMacro.hpp  ExceptionWithLocation.hpp  GlobalSettings.cpp  GlobalSettings.hpp  Hashing.hpp  JsonSerializers.cpp  Logging.hpp  (+37 more)
test/: overview.txt
test/libcell/: CMakeLists.txt  Main.cpp
test/libcell/common/: TestUtils.hpp
test/libcell/integration/: CellTest.cpp  CollisionTest.cpp  CompartmentTest.cpp  GlobalSettingsTest.cpp  HashingTest.cpp  ReactionTableTest.cpp  ReactionTest.cpp  ReactionsTest.cpp  SerializationTest.cpp  TestUtils.hpp
test/libcell/unit/: CellTest.cpp  CollisionDetectorTest.cpp  CollisionHandlerTest.cpp  CollisionTest.cpp  DiscTest.cpp  DiscTypeRegistryTest.cpp  DiscTypeTest.cpp  GlobalSettingsTest.cpp  MathUtilsTest.cpp  MembraneTest.cpp  MembraneTypeTest.cpp  PhysicalObjectTest.cpp  ReactionTableTest.cpp  ReactionTest.cpp  ReactionsTest.cpp  SerializationTest.cpp  SettingsTest.cpp  TestUtils.hpp  WorldTest.cpp
(+220 files in other folders)
